// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_k_"
        aria-selected="false"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_o_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_l_"
        aria-selected="true"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_p_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_m_"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_10_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_n_"
        aria-selected="false"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_17_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_o_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_k_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_p_"
      role="tabpanel"
      aria-labelledby="tab-_r_l_"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_s_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_q_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_u_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_q_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_10_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_m_"
      style
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_13_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_11_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_15_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_11_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_17_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_n_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_18_"
        aria-selected="false"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_1c_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_19_"
        aria-selected="false"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_1d_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_1a_"
        aria-selected="true"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_1k_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_1b_"
        aria-selected="false"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_1r_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_1c_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_18_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_1d_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_19_"
      style
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_1g_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_1e_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_1i_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_1e_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_1k_"
      role="tabpanel"
      aria-labelledby="tab-_r_1a_"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_1n_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_1l_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_1p_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_1l_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_1r_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_1b_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_1s_"
        aria-selected="false"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_20_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_1t_"
        aria-selected="false"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_21_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_1u_"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_28_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_1v_"
        aria-selected="true"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_2f_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_20_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_1s_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_21_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_1t_"
      style
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_24_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_22_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_26_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_22_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_28_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_1u_"
      style
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_2b_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_29_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_2d_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_29_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_2f_"
      role="tabpanel"
      aria-labelledby="tab-_r_1v_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Story 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_0_"
        aria-selected="true"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_4_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_1_"
        aria-selected="false"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_5_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_2_"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_c_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_3_"
        aria-selected="false"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_j_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_4_"
      role="tabpanel"
      tabindex="0"
      aria-labelledby="tab-_r_0_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_5_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_1_"
      style
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_8_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_6_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_a_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_6_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_c_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_2_"
      style
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <div>
            <div
              role="radiogroup"
              data-variant="primary"
              tabindex="0"
            >
              <button
                data-variant="primary"
                type="button"
                value="graph"
                id="togglegroup-item-_r_f_"
                aria-checked="true"
                aria-current="true"
                role="radio"
                name="togglegroup-name-_r_d_"
                data-roving-tabindex-item="true"
                tabindex="0"
              >
                Vis som graf
              </button>
              <button
                data-variant="tertiary"
                type="button"
                value="table"
                id="togglegroup-item-_r_h_"
                aria-checked="false"
                aria-current="false"
                role="radio"
                name="togglegroup-name-_r_d_"
                data-roving-tabindex-item="true"
                tabindex="-1"
              >
                Vis som tabell
              </button>
            </div>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Last ned PDF
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_j_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_3_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
